--- a/popup.html
+++ b/popup.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Facebook Group Data Collector</title>
+  <link rel="stylesheet" href="css/console-logger.css">
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -135,6 +136,10 @@
   
   <div class="section">
     <button id="export-data" style="display: none;">Export Collected Data (CSV)</button>
+  </div>
+  
+  <div class="section">
+    <button id="toggle-console" style="background-color: #555;">Toggle Console Logger</button>
   </div>
   
   <script src="popup.js"></script>
