--- a/popup.html
+++ b/popup.html
@@ -4,143 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Facebook Group Data Collector</title>
-  <link rel="stylesheet" href="css/console-logger.css">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      width: 400px;
-      padding: 15px;
-    }
-    h1 {
-      color: #1877f2; /* Facebook blue */
-      font-size: 20px;
-      margin-bottom: 20px;
-      text-align: center;
-    }
-    button {
-      background-color: #1877f2; /* Facebook blue */
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 5px;
-      font-size: 16px;
-      cursor: pointer;
-      transition: background-color 0.3s;
-      margin: 10px 0;
-    }
-    button:hover {
-      background-color: #166fe5;
-    }
-    .logo {
-      width: 80px;
-      height: 80px;
-      margin-bottom: 15px;
-    }
-    .section {
-      margin-bottom: 20px;
-      border-bottom: 1px solid #e0e0e0;
-      padding-bottom: 15px;
-    }
-    .section:last-child {
-      border-bottom: none;
-    }
-    label {
-      display: block;
-      margin-bottom: 5px;
-      font-weight: bold;
-    }
-    input, select {
-      width: 100%;
-      padding: 8px;
-      margin-bottom: 10px;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-      box-sizing: border-box;
-    }
-    #groupList {
-      max-height: 200px;
-      overflow-y: auto;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-      margin-bottom: 15px;
-    }
-    .group-item {
-      padding: 8px;
-      border-bottom: 1px solid #eee;
-      cursor: pointer;
-    }
-    .group-item:hover {
-      background-color: #f5f5f5;
-    }
-    .group-item.selected {
-      background-color: #e7f3ff;
-    }
-    .status {
-      margin-top: 15px;
-      padding: 10px;
-      background-color: #f5f5f5;
-      border-radius: 4px;
-      display: none;
-    }
-    .progress-container {
-      width: 100%;
-      background-color: #ddd;
-      border-radius: 4px;
-      margin-top: 10px;
-    }
-    .progress-bar {
-      height: 20px;
-      background-color: #1877f2;
-      border-radius: 4px;
-      width: 0%;
-      text-align: center;
-      line-height: 20px;
-      color: white;
-    }
-  </style>
+  <link rel="stylesheet" href="popup.css">
 </head>
-<body>
-  <h1>Facebook Group Data Collector</h1>
-  
-  <div class="section">
-    <label for="step">Current Step:</label>
-    <select id="step" disabled>
-      <option value="1" selected>1. Select Facebook Groups</option>
-      <option value="2">2. Collect Post Data</option>
-    </select>
-  </div>
-  
-  <div id="step1" class="section">
-    <button id="fetch-groups">Fetch My Facebook Groups</button>
-    <div id="groupList" style="display: none;"></div>
-    <div id="selectedGroups" style="display: none;">
-      <label>Selected Groups:</label>
-      <div id="selectedGroupsList"></div>
-    </div>
-    <button id="confirm-groups" style="display: none;">Confirm Selected Groups</button>
-  </div>
-  
-  <div id="step2" class="section" style="display: none;">
-    <label for="postCount">Number of Posts to Collect per Group:</label>
-    <input type="number" id="postCount" min="1" max="100" value="10">
+<body> 
+  <div id="main-container">
+    <h1>Facebook Group Collector</h1>
     
-    <button id="start-collection">Start Data Collection</button>
-    
-    <div id="status" class="status">
-      <div id="statusText">Preparing to collect data...</div>
-      <div class="progress-container">
-        <div id="progressBar" class="progress-bar">0%</div>
-      </div>
-    </div>
-  </div>
-  
-  <div class="section">
-    <button id="export-data" style="display: none;">Export Collected Data (CSV)</button>
-  </div>
-  
-  <div class="section">
-    <button id="toggle-console" style="background-color: #555;">Toggle Console Logger</button>
-  </div>
+    <div id="group-input-section">
+      <label for="group-url">Add Group URL:</label>
+      <input type="text" id="group-url" placeholder="https://facebook.com/groups/...">
+      <button id="add-group">Add Group</button>
+    </div>    
   
   <script src="popup.js"></script>
 </body>
