feat: Implement AddGroup module for managing Facebook group additions

--- a/popup.html
+++ b/popup.html
@@ -16,6 +16,7 @@
       <button id="add-group">Add Group</button>
     </div>    
   
+  <script src="src/add-group.js"></script>
   <script src="popup.js"></script>
 </body>
 </html>
