feat: Add group display functionality to show added Facebook groups

--- a/popup.html
+++ b/popup.html
@@ -15,8 +15,14 @@
       <input type="text" id="group-url" placeholder="https://facebook.com/groups/...">
       <button id="add-group">Add Group</button>
     </div>    
-  
+    
+    <div id="group-display-section">
+      <h2>Added Groups</h2>
+      <div id="group-list-container"></div>
+    </div>
+
   <script src="src/add-group.js"></script>
+  <script src="src/group-display.js"></script>
   <script src="popup.js"></script>
 </body>
 </html>
