feat: Add VisitGroups module to handle visiting Facebook groups and update popup interface

--- a/popup.html
+++ b/popup.html
@@ -21,8 +21,14 @@
       <div id="group-list-container"></div>
     </div>
 
+    <div id="controls-section">
+      <button id="start-button">Start Visiting Groups</button>
+      <div id="status-text"></div>
+    </div>
+
   <script src="src/add-group.js"></script>
   <script src="src/group-display.js"></script>
+  <script src="src/visit-groups.js"></script>
   <script src="popup.js"></script>
 </body>
 </html>
