feat: Enhance logging functionality in AddGroup and VisitGroups modules

--- a/src/log-viewer.html
+++ b/src/log-viewer.html
@@ -33,6 +33,7 @@
 </head>
 <body>
     <h2>Extension Logs</h2>
+    <button id="clear-logs" style="margin-bottom: 10px;">Clear All Logs</button>
     <div class="log-container" id="logs"></div>
     <script src="log-viewer.js"></script>
 </body>
