--- a/popup.html
+++ b/popup.html
@@ -28,6 +28,7 @@
 
   <script src="src/add-group.js"></script>
   <script src="src/group-display.js"></script>
+  <script src="src/log-viewer.js"></script>
   <script src="src/visit-groups.js"></script>
   <script src="popup.js"></script>
 </body>
