feat: Refactor logging communication and enhance log display functionality in popup

--- a/popup.html
+++ b/popup.html
@@ -26,6 +26,10 @@
       <div id="status-text"></div>
     </div>
 
+    <h2>Logs</h2>
+    <button id="clear-logs" style="margin-bottom: 10px;">Clear All Logs</button>
+    <div class="log-container" id="logs"></div>
+
   <script src="src/add-group.js"></script>
   <script src="src/group-display.js"></script>
   <script src="src/log-viewer.js"></script>
