--- a/popup.html
+++ b/popup.html
@@ -1,39 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Facebook Group Data Collector</title>
-  <link rel="stylesheet" href="popup.css">
+  <title>Facebook Group Collector</title>
+  <style>
+    body {
+      width: 300px;
+      padding: 10px;
+      font-family: Arial, sans-serif;
+    }
+    .input-group {
+      margin-bottom: 10px;
+    }
+    input[type="text"] {
+      width: 70%;
+      padding: 5px;
+    }
+    button {
+      padding: 5px 10px;
+      background-color: #1877f2;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #166fe5;
+    }
+    #status {
+      margin-top: 10px;
+      padding: 5px;
+      border-radius: 3px;
+    }
+    .success {
+      background-color: #d4edda;
+      color: #155724;
+    }
+    .error {
+      background-color: #f8d7da;
+      color: #721c24;
+    }
+  </style>
 </head>
-<body> 
-  <div id="main-container">
-    <h1>Facebook Group Collector</h1>
-    
-    <div id="group-input-section">
-      <label for="group-url">Add Group URL:</label>
-      <input type="text" id="group-url" placeholder="https://facebook.com/groups/...">
-      <button id="add-group">Add Group</button>
-    </div>    
-    
-    <div id="group-display-section">
-      <h2>Added Groups</h2>
-      <div id="group-list-container"></div>
-    </div>
-
-    <div id="controls-section">
-      <button id="start-button">Start Visiting Groups</button>
-      <div id="status-text"></div>
-    </div>
-
-    <h2>Logs</h2>
-    <button id="clear-logs" style="margin-bottom: 10px;">Clear All Logs</button>
-    <div class="log-container" id="logs"></div>
-
-  <script src="src/add-group.js"></script>
-  <script src="src/group-display.js"></script>
-  <script src="src/log-viewer.js"></script>
-  <script src="src/visit-groups.js"></script>
+<body>
+  <h2>Facebook Group Collector</h2>
+  <div class="input-group">
+    <input type="text" id="groupUrl" placeholder="Enter Facebook Group URL">
+    <button id="extractBtn">Extract Usernames</button>
+  </div>
+  <div id="status"></div>
+  <div id="results"></div>
   <script src="popup.js"></script>
 </body>
 </html>
